forgot to assign it back to df

--- a/ames_data_cleaning.ipynb
+++ b/ames_data_cleaning.ipynb
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "20ab78f1",
+   "id": "c484b27e",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7e6c985f",
+   "id": "5628d2a5",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13fe9e8f",
+   "id": "5a76eb30",
    "metadata": {},
    "source": [
     "We can separate columns into categories:\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7f1aa9f5",
+   "id": "4f5e63cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,8 +372,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "817dbc99",
+   "execution_count": 12,
+   "id": "0f93e858",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# rename columns\n",
+    "df = df.rename(columns=col_name_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8cd66887",
    "metadata": {},
    "outputs": [
     {
@@ -493,253 +506,37 @@
        "      <td>WD</td>\n",
        "      <td>109000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>318</td>\n",
-       "      <td>916386060</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>9802</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>174000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>255</td>\n",
-       "      <td>906425045</td>\n",
-       "      <td>50</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>82.0</td>\n",
-       "      <td>14235</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>138500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2046</th>\n",
-       "      <td>1587</td>\n",
-       "      <td>921126030</td>\n",
-       "      <td>20</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>11449</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>HLS</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>298751</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2047</th>\n",
-       "      <td>785</td>\n",
-       "      <td>905377130</td>\n",
-       "      <td>30</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>12342</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>82500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2048</th>\n",
-       "      <td>916</td>\n",
-       "      <td>909253010</td>\n",
-       "      <td>50</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>7558</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Bnk</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>177000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2049</th>\n",
-       "      <td>639</td>\n",
-       "      <td>535179160</td>\n",
-       "      <td>20</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>10400</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>144000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2050</th>\n",
-       "      <td>10</td>\n",
-       "      <td>527162130</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>7500</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>189000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2051 rows × 81 columns</p>\n",
+       "<p>3 rows × 81 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        id        pid  ms_subclass ms_zoning  lot_frontage  lot_area street  \\\n",
-       "0      109  533352170           60        RL           NaN     13517   Pave   \n",
-       "1      544  531379050           60        RL          43.0     11492   Pave   \n",
-       "2      153  535304180           20        RL          68.0      7922   Pave   \n",
-       "3      318  916386060           60        RL          73.0      9802   Pave   \n",
-       "4      255  906425045           50        RL          82.0     14235   Pave   \n",
-       "...    ...        ...          ...       ...           ...       ...    ...   \n",
-       "2046  1587  921126030           20        RL          79.0     11449   Pave   \n",
-       "2047   785  905377130           30        RL           NaN     12342   Pave   \n",
-       "2048   916  909253010           50        RL          57.0      7558   Pave   \n",
-       "2049   639  535179160           20        RL          80.0     10400   Pave   \n",
-       "2050    10  527162130           60        RL          60.0      7500   Pave   \n",
+       "    id        pid  ms_subclass ms_zoning  lot_frontage  lot_area street alley  \\\n",
+       "0  109  533352170           60        RL           NaN     13517   Pave   NaN   \n",
+       "1  544  531379050           60        RL          43.0     11492   Pave   NaN   \n",
+       "2  153  535304180           20        RL          68.0      7922   Pave   NaN   \n",
        "\n",
-       "     alley lot_shape land_contour  ... screen_porch pool_area pool_quality  \\\n",
-       "0      NaN       IR1          Lvl  ...            0         0          NaN   \n",
-       "1      NaN       IR1          Lvl  ...            0         0          NaN   \n",
-       "2      NaN       Reg          Lvl  ...            0         0          NaN   \n",
-       "3      NaN       Reg          Lvl  ...            0         0          NaN   \n",
-       "4      NaN       IR1          Lvl  ...            0         0          NaN   \n",
-       "...    ...       ...          ...  ...          ...       ...          ...   \n",
-       "2046   NaN       IR1          HLS  ...            0         0          NaN   \n",
-       "2047   NaN       IR1          Lvl  ...            0         0          NaN   \n",
-       "2048   NaN       Reg          Bnk  ...            0         0          NaN   \n",
-       "2049   NaN       Reg          Lvl  ...            0         0          NaN   \n",
-       "2050   NaN       Reg          Lvl  ...            0         0          NaN   \n",
+       "  lot_shape land_contour  ... screen_porch pool_area pool_quality fence  \\\n",
+       "0       IR1          Lvl  ...            0         0          NaN   NaN   \n",
+       "1       IR1          Lvl  ...            0         0          NaN   NaN   \n",
+       "2       Reg          Lvl  ...            0         0          NaN   NaN   \n",
        "\n",
-       "     fence misc_feature misc_value month_sold year_sold  sale_type  sale_price  \n",
-       "0      NaN          NaN          0          3      2010        WD       130500  \n",
-       "1      NaN          NaN          0          4      2009        WD       220000  \n",
-       "2      NaN          NaN          0          1      2010        WD       109000  \n",
-       "3      NaN          NaN          0          4      2010        WD       174000  \n",
-       "4      NaN          NaN          0          3      2010        WD       138500  \n",
-       "...    ...          ...        ...        ...       ...        ...         ...  \n",
-       "2046   NaN          NaN          0          1      2008        WD       298751  \n",
-       "2047   NaN          NaN          0          3      2009        WD        82500  \n",
-       "2048   NaN          NaN          0          3      2009        WD       177000  \n",
-       "2049   NaN          NaN          0         11      2009        WD       144000  \n",
-       "2050   NaN          NaN          0          6      2010        WD       189000  \n",
+       "  misc_feature misc_value month_sold year_sold  sale_type  sale_price  \n",
+       "0          NaN          0          3      2010        WD       130500  \n",
+       "1          NaN          0          4      2009        WD       220000  \n",
+       "2          NaN          0          1      2010        WD       109000  \n",
        "\n",
-       "[2051 rows x 81 columns]"
+       "[3 rows x 81 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.rename(columns=col_name_dict)"
+    "df.head(3)"
    ]
   }
  ],
