--- a/ames_data_cleaning.ipynb
+++ b/ames_data_cleaning.ipynb
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c484b27e",
+   "id": "c498ba8d",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5628d2a5",
+   "id": "f9181da3",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a76eb30",
+   "id": "da0ef92d",
    "metadata": {},
    "source": [
     "We can separate columns into categories:\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4f5e63cf",
+   "id": "b0a9d455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "0f93e858",
+   "id": "3c2b5d8a",
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8cd66887",
+   "id": "dc0f5336",
    "metadata": {},
    "outputs": [
     {
@@ -537,6 +537,132 @@
    ],
    "source": [
     "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ac431bd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'pid', 'ms_subclass', 'ms_zoning', 'lot_frontage', 'lot_area',\n",
+       "       'street', 'alley', 'lot_shape', 'land_contour', 'utilities',\n",
+       "       'lot_config', 'land_slope', 'neighborhood', 'condition_1',\n",
+       "       'condition_2', 'building_type', 'house_style', 'overall_quality',\n",
+       "       'overall_condition', 'year_built', 'year_remodel_add', 'roof_style',\n",
+       "       'roof_material', 'exterior_1', 'exterior_2', 'masonry_type',\n",
+       "       'masonry_area', 'external_quality', 'external_condition', 'foundation',\n",
+       "       'basement_quality', 'basement_condition', 'basement_exposure',\n",
+       "       'basement_fin_type_1', 'basement_fin_sf_1', 'basement_fin_type_2',\n",
+       "       'basement_fin_sf_2', 'basement_unf_sf', 'total_basement_sf', 'heating',\n",
+       "       'heating_qc', 'central_air', 'electrical', '1st_floor_sf',\n",
+       "       '2nd_floor_sf', 'low_quality_fin_sf', 'ground_living_area',\n",
+       "       'basement_full_bath', 'basement_half_bath', 'full_bath', 'half_bath',\n",
+       "       'bed_above_ground', 'kitchen_above_ground', 'kitchen_quality',\n",
+       "       'total_rooms_above_ground', 'functional', 'fireplace',\n",
+       "       'fireplace_quality', 'garage_type', 'garage_year_built', 'garage_fin',\n",
+       "       'garage_cars', 'garage_area', 'garage_quality', 'garage_condition',\n",
+       "       'paved_drive', 'wood_deck_sf', 'open_porch_df', 'enclosed_porch',\n",
+       "       '3ssn_porch', 'screen_porch', 'pool_area', 'pool_quality', 'fence',\n",
+       "       'misc_feature', 'misc_value', 'month_sold', 'year_sold', 'sale_type',\n",
+       "       'sale_price'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b0eb9e67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# grouping columns\n",
+    "\n",
+    "# ID group probably won't be used\n",
+    "id_group = ['id', 'pid']\n",
+    "ms_group = ['ms_subclass', 'ms_zoning']\n",
+    "\n",
+    "# Lot group - shape & area of land etc.\n",
+    "lot_group = ['lot_frontage', 'lot_area','lot_shape','lot_config']\n",
+    "\n",
+    "# Location group - might help a little bit \n",
+    "location_group = ['street', 'alley','neighborhood','condition_1','condition_2']\n",
+    "\n",
+    "# Land group - how slope the area is\n",
+    "land_group = ['land_contour','land_slope']\n",
+    "\n",
+    "# Building group - different building types will cost differently\n",
+    "building_group = ['building_type','house_style',]\n",
+    "\n",
+    "# Overall group - overall condition might play a part in differentiating prices\n",
+    "overall_group = ['overall_quality','overall_condition']\n",
+    "\n",
+    "# Year group - newer houses costs more this should be used\n",
+    "year_group = ['year_built','year_remodel_add']\n",
+    "\n",
+    "# Exterior group - style of roofs, walls, etc - might only pick one\n",
+    "exterior_group = ['roof_style','roof_material','exterior_1','exterior_2','masonry_type','masonry_area',\n",
+    "                  'external_quality','external_condition']\n",
+    "\n",
+    "# Basement group - could feature engineer to combine them all to 1-2 features\n",
+    "basement_group = ['foundation','basement_quality','basement_condition','basement_exposure','basement_fin_type_1',\n",
+    "                 'basement_fin_sf_1','basement_fin_sf_2','basement_fin_type_2','basement_unf_sf','total_basement_sf',\n",
+    "                 'basement_full_bath','basement_half_bath']\n",
+    "\n",
+    "# Function group - some features might exist in more expensive houses e.g. central air\n",
+    "function_group = ['utilities','heating','heating_qc','central_air','electrical','functional','fireplace','fireplace_quality']\n",
+    "\n",
+    "# Area group - feature engineer to combine total sf \n",
+    "area_group = ['1st_floor_sf','2nd_floor_sf','ground_living_area']\n",
+    "\n",
+    "# Baths - feature engineer to just bath\n",
+    "bath_group = ['full_bath','half_bath']\n",
+    "\n",
+    "# Bed group - no. of bedrooms can leave as is\n",
+    "bed_group = ['bed_above_ground']\n",
+    "\n",
+    "# Kitchen group - to explore\n",
+    "kitchen_group = ['kitchen_above_ground','kitchen_quality']\n",
+    "\n",
+    "# Room group - probably can leave as is, more rooms should be more expensive\n",
+    "room_group = ['total_rooms_above_ground']\n",
+    "\n",
+    "# Garage group - some garage types costs more than others\n",
+    "garage_group = ['garage_type','garage_year_built','garage_fin','garage_cars','garage_area','garage_quality',\n",
+    "                'garage_condition']\n",
+    "\n",
+    "# Drive group - paved drive costs more, gotta check distribution\n",
+    "drive_group = ['paved_drive']\n",
+    "\n",
+    "# This one can be dropped\n",
+    "unsure_group = ['low_quality_fin_sf']\n",
+    "\n",
+    "# Porch group - can porbably select one or two eg. fence and something else\n",
+    "porch_group = ['fence','wood_deck_sf', 'open_porch_df', 'enclosed_porch','3ssn_porch', 'screen_porch']\n",
+    "\n",
+    "# Only a few houses have pools - might be better to leave out of the equation\n",
+    "pool_group = ['pool_area', 'pool_quality']\n",
+    "\n",
+    "# Misc group - select one probably, or even leave out\n",
+    "misc_group = ['misc_feature', 'misc_value']\n",
+    "\n",
+    "# Sold group - this one should be explored further, but year sold should play a part (maybe year built is better)\n",
+    "sold_group = ['month_sold', 'year_sold', 'sale_type']\n",
+    "\n",
+    "# Target variable\n",
+    "target_var = ['sale_price']"
    ]
   }
  ],
