add some comments and evaluation

--- a/code/02_preprocessing_feature_engineering.ipynb
+++ b/code/02_preprocessing_feature_engineering.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b111f402",
+   "metadata": {},
+   "source": [
+    "# Part 2. Preprocessing, Feature Engineering, and Outlier Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b70aa3a1",
    "metadata": {},
    "source": [
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c73302",
+   "id": "7a12a9c5",
    "metadata": {},
    "source": [
     "This column can be left as such"
@@ -3016,7 +3024,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "f0ed8feb",
+   "id": "9dafca91",
    "metadata": {},
    "outputs": [
     {
@@ -3534,7 +3542,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "ce527877",
+   "id": "3329b8bb",
    "metadata": {
     "scrolled": true
    },
@@ -3986,7 +3994,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "345ae08c",
+   "id": "230eb258",
    "metadata": {
     "scrolled": true
    },
@@ -5669,7 +5677,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "a3292a1f",
+   "id": "1673579a",
    "metadata": {},
    "outputs": [
     {
@@ -5690,7 +5698,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "7bbbf546",
+   "id": "fafddd2e",
    "metadata": {},
    "outputs": [],
    "source": [
