--- a/code/03_model_benchmarking.ipynb
+++ b/code/03_model_benchmarking.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "475402a3",
+   "metadata": {},
+   "source": [
+    "# Part 3. Benchmarking Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b70aa3a1",
    "metadata": {},
    "source": [
@@ -68,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "85a6a31c",
+   "id": "0c022088",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23318b14",
+   "id": "01ac28e6",
    "metadata": {},
    "source": [
     "__Interpretation:__\n",
