--- a/code/05_kaggle_competition.ipynb
+++ b/code/05_kaggle_competition.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "f7ca44e4",
+   "metadata": {},
+   "source": [
+    "# Part 5. Kaggle Competition Submission Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b70aa3a1",
    "metadata": {},
    "source": [
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "4a1f3014",
    "metadata": {},
    "outputs": [],
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "6719a05e",
    "metadata": {
     "scrolled": true
@@ -258,7 +266,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04a69a81",
+   "id": "fc3f3d4f",
    "metadata": {},
    "source": [
     "## Loading the model"
@@ -278,12 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e937fd92",
+   "execution_count": 33,
+   "id": "3471be40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'all_num_6_quality_cat.sav'\n",
+    "filename = 'all_num_many_cat.sav'\n",
     "model = pickle.load(open(filename, 'rb'))"
    ]
   },
@@ -297,20 +305,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d8d91d30",
+   "execution_count": 34,
+   "id": "62bc4250",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Select all quality related categorical columns\n",
     "cat_cols = ['external_quality','basement_quality','heating_quality','kitchen_quality','fireplace_quality',\n",
-    "           'garage_quality']"
+    "           'garage_quality','garage_fin','building_type','house_style','sale_type','sale_condition',\n",
+    "            'condition_1','masonry_type','roof_style']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "ee8ff279",
+   "execution_count": 35,
+   "id": "636d28d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,8 +333,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1afdfc80",
+   "execution_count": 36,
+   "id": "f79bdccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,8 +344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "09c9d124",
+   "execution_count": 37,
+   "id": "fec2f248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "d215a391",
    "metadata": {},
    "outputs": [],
@@ -357,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "de0bf4d3",
    "metadata": {
     "scrolled": false
@@ -370,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "a428f2da",
    "metadata": {},
    "outputs": [],
@@ -381,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "6c669a2a",
    "metadata": {},
    "outputs": [],
@@ -392,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "159acdde",
    "metadata": {},
    "outputs": [],
@@ -403,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "64292b76",
    "metadata": {},
    "outputs": [],
@@ -414,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 44,
    "id": "c377eaf7",
    "metadata": {},
    "outputs": [
@@ -434,11 +443,17 @@
        "       'kitchen_quality_Gd', 'kitchen_quality_Ta', 'fireplace_quality_Fa',\n",
        "       'fireplace_quality_Gd', 'fireplace_quality_None',\n",
        "       'fireplace_quality_Po', 'fireplace_quality_TA', 'garage_quality_G',\n",
-       "       'garage_quality_O'],\n",
+       "       'garage_quality_O', 'garage_fin_None', 'garage_fin_RFn',\n",
+       "       'garage_fin_Unf', 'building_type_2F', 'building_type_D',\n",
+       "       'building_type_T', 'house_style_2', 'house_style_S', 'sale_type_CON',\n",
+       "       'sale_type_N', 'sale_type_W', 'sale_condition_Other',\n",
+       "       'sale_condition_P', 'condition_1_F', 'condition_1_N', 'condition_1_P',\n",
+       "       'condition_1_R', 'masonry_type_N', 'masonry_type_S', 'roof_style_H',\n",
+       "       'roof_style_O'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
