--- a/code/06_production_model_evaluation.ipynb
+++ b/code/06_production_model_evaluation.ipynb
@@ -475,6 +475,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "fa20ba27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['overall_quality', 'total_sf', 'garage_cars', 'total_bath',\n",
+       "       'year_built', 'has_fireplace', 'total_rooms_above_ground',\n",
+       "       'has_open_porch', 'masonry_area', 'log_lot_area', 'lot_frontage',\n",
+       "       'has_wood_deck', 'central_air', 'has_basement_sf',\n",
+       "       'bedroom_above_ground', 'functional', 'street', 'has_2nd_floor_sf',\n",
+       "       'month_sold', 'year_sold', 'lot_contour', 'lot_slope',\n",
+       "       'overall_condition', 'kitchen_above_ground', 'lot_shape',\n",
+       "       'external_quality_Fa', 'external_quality_Gd', 'external_quality_TA',\n",
+       "       'basement_quality_E', 'basement_quality_G', 'basement_quality_O',\n",
+       "       'heating_quality_Fa', 'heating_quality_Gd', 'heating_quality_TA',\n",
+       "       'kitchen_quality_Gd', 'kitchen_quality_Ta', 'fireplace_quality_Fa',\n",
+       "       'fireplace_quality_Gd', 'fireplace_quality_None',\n",
+       "       'fireplace_quality_Po', 'fireplace_quality_TA', 'garage_quality_G',\n",
+       "       'garage_quality_O'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "7a281966",
    "metadata": {
